--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -1,22 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <SignAssembly>false</SignAssembly>
-    <Version>1.0</Version>
-    <Authors>Chr_</Authors>
-    <Company>blog.JustArchiNET</Company>
-    <Copyright>Copyright © Chr_ 2015-2020</Copyright>
-    <Description>ASF增强插件</Description>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Library</OutputType>
+        <SignAssembly>false</SignAssembly>
+        <Version>1.0</Version>
+        <Authors>Chr_</Authors>
+        <Company>blog.JustArchiNET</Company>
+        <Copyright>Copyright © Chr_ 2020</Copyright>
+        <Description>ASF增强插件</Description>
+        <PackageProjectUrl>https://github.com/chr233/ASFEnhance</PackageProjectUrl>
+        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+    </PropertyGroup>
+    <ItemGroup>
+      <None Include="..\.editorconfig" Link=".editorconfig" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="4.0.0">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="SteamKit2" Version="*" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="4.0.0">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="SteamKit2" Version="*" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\ArchiSteamFarm-4.3.1.0\ArchiSteamFarm\ArchiSteamFarm.csproj" />
+    </ItemGroup>
 </Project>
