--- a/.editorconfig
+++ b/.editorconfig
@@ -86,3 +86,6 @@ dotnet_style_qualification_for_field = true:suggestion
 #prefer properties not to be prefaced with this. or Me. in Visual Basic
 dotnet_style_qualification_for_property = false:suggestion
 insert_final_newline=true
+
+# CS8632: 只能在 "#nullable" 注释上下文内的代码中使用可为 null 的引用类型的注释。
+dotnet_diagnostic.CS8632.severity = suggestion
