--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ArchiSteamFarm-5.1.0.9\ArchiSteamFarm\ArchiSteamFarm.csproj" />
+    <ProjectReference Include="..\..\ArchiSteamFarm-5.1.2.4\ArchiSteamFarm\ArchiSteamFarm.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -84,6 +84,6 @@
     </None>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_DetectChanges="False" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
