--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -41,18 +41,23 @@
     <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="5.0.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="SteamKit2" Version="2.3.0" />
+    <PackageReference Include="SteamKit2" Version="2.4.0-Alpha.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ArchiSteamFarm-5.1.1.1\ArchiSteamFarm\ArchiSteamFarm.csproj" />
+    <ProjectReference Include="..\..\ArchiSteamFarm-5.1.2.4\ArchiSteamFarm\ArchiSteamFarm.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Localization\Localization.Designer.cs">
+    <Compile Update="Localization\Langs.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Localization.resx</DependentUpon>
+      <DependentUpon>Langs.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Localization\Localization.zh-CN.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Localization.zh-CN.resx</DependentUpon>
     </Compile>
     <Compile Update="Localization\Localization.zh-CN.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -67,13 +72,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Localization\Localization.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Localization.Designer.cs</LastGenOutput>
+    <EmbeddedResource Update="Langs\Langs.en-US.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <CustomToolNamespace>Chrxw.ASFEnhance</CustomToolNamespace>
     </EmbeddedResource>
-    <EmbeddedResource Update="Localization\Localization.zh-CN.resx">
+    <EmbeddedResource Update="Localization\Langs.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Langs.Designer.cs</LastGenOutput>
+      <CustomToolNamespace></CustomToolNamespace>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Langs.zh-CN.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Localization.zh-CN.Designer.cs</LastGenOutput>
+      <CustomToolNamespace></CustomToolNamespace>
     </EmbeddedResource>
   </ItemGroup>
 
@@ -85,5 +96,9 @@
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_DetectChanges="False" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" /></VisualStudio></ProjectExtensions>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="cp $(TargetPath) C:\Users\chr11\OneDrive\repos\ASF_Plugins\ASF-5.1.2.4\plugins\$(TargetFileName)" />
+  </Target>
 
 </Project>
