--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -68,6 +68,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Localization.zh-CN.resx</DependentUpon>
     </Compile>
+    <Compile Update="Localization\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
     <Compile Update="Settings1.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
@@ -83,12 +88,10 @@
     <EmbeddedResource Update="Localization\Langs.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Langs.Designer.cs</LastGenOutput>
-      <CustomToolNamespace></CustomToolNamespace>
     </EmbeddedResource>
-    <EmbeddedResource Update="Localization\Langs.zh-CN.resx">
+    <EmbeddedResource Update="Localization\Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Localization.zh-CN.Designer.cs</LastGenOutput>
-      <CustomToolNamespace></CustomToolNamespace>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
