--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,8 +31,8 @@ jobs:
         shell: pwsh
         run: |
           $save_path = "..\ASF_source.zip";
-          $asf_path = "..\ArchiSteamFarm-{{ env.ASF_VERSION }}";
-          $source_path = "https://github.com/JustArchiNET/ArchiSteamFarm/archive/refs/tags/{{ env.ASF_VERSION }}.zip";
+          $asf_path = "..\ArchiSteamFarm-${{ env.ASF_VERSION }}";
+          $source_path = "https://github.com/JustArchiNET/ArchiSteamFarm/archive/refs/tags/${{ env.ASF_VERSION }}.zip";
           $client = New-Object System.Net.WebClient;
           $client.DownloadFile("$source_path", "$save_path");
           7z x "$save_path" -o "$asf_path";
