新增 EVENT EVENTCHECK 命令, 秋促批量投票 使用方法参见 README.md 更新版本 1.5.7.194 -> 1.5.8.208

--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -38,6 +38,9 @@
     <Optimize>true</Optimize>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Data\AppDetails.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
