--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -15,10 +15,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj" />
+		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj" ExcludeAssets="all" Private="false" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AngleSharp.XPath" Version="1.1.7" />
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" Version="5.0.0" />
 		<PackageReference Include="Newtonsoft.Json" IncludeAssets="compile" Version="13.0.1" />
 		<PackageReference Include="SteamKit2" IncludeAssets="compile" Version="2.4.1" />
