--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -23,7 +23,7 @@
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" Version="5.0.0" />
 		<PackageReference Include="Newtonsoft.Json" IncludeAssets="compile" Version="13.0.1" />
 		<PackageReference Include="SteamKit2" IncludeAssets="compile" Version="2.4.1" />
-		<PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
+		<PackageReference Include="System.Composition.AttributedModel" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
