优化文件格式 修复bug 优化命令输出格式

--- a/.editorconfig
+++ b/.editorconfig
@@ -208,3 +208,6 @@ dotnet_style_qualification_for_field = true:suggestion
 dotnet_style_qualification_for_property = false:suggestion
 dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_event = false:silent
+
+# Default severity for analyzer diagnostics with category 'Style'
+dotnet_analyzer_diagnostic.category-Style.severity = silent
