--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,9 @@
 	path = ArchiSteamFarm
 	branch = main
 	url = git@github.com:JustArchiNET/ArchiSteamFarm.git
+[submodule "ASFEnhance.wiki"]
+	path = wiki
+	url = https://github.com/chr233/ASFEnhance.wiki.git
+[submodule "wiki"]
+	path = wiki
+	url = https://github.com/chr233/ASFEnhance.wiki.git
